@@ -6,7 +6,7 @@ module God
       
       def valid?
         valid = true
-        valid &= complain("You must specify the 'what' attribute for :always") if self.what.nil?
+        valid &= complain("Attribute 'what' must be specified", self) if self.what.nil?
         valid
       end
       
